--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:backgroundTint="#153445"
     tools:context=".MainActivity">
 
     <com.google.android.material.button.MaterialButton
@@ -11,6 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/model_viewer"
+        android:textColor="@color/white"
+        android:backgroundTint="#F8E007"
+        android:fontFamily="sans-serif"
+        android:textFontWeight="900"
+        android:shadowColor="#F30202"
+        app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,6 +29,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ar_core"
+        android:textColor="@color/white"
+        android:backgroundTint="#F8E007"
+        android:fontFamily="sans-serif"
+        android:textFontWeight="900"
+        android:shadowColor="#F30202"
+        app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/modelViewerButton"
